Fix: contrast on PHP info page

--- a/resources/css/administration.css
+++ b/resources/css/administration.css
@@ -108,13 +108,10 @@ h4 {
     background-color: #99c;
 }
 .php-info .v {
-    background-color: #ddd;
+    background-color: #fff;
     max-width: 300px;
     overflow-x: auto;
     word-break: break-all;
-}
-.php-info .v i {
-    color: #999;
 }
 .php-info img {
     float: right;
